# robospec

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  streamlit_app.py
demo_configs/anymal_flat/: README.md  __init__.py  anymal_d_flat_env_cfg.py  train.py
demo_configs/cartpole/: README.md  __init__.py  cartpole_cartpole_env_cfg.py  train.py
demo_configs/franka_reach/: README.md  __init__.py  franka_panda_reach_env_cfg.py  train.py
docs/: robospec-build-spec.md
robospec/: __init__.py  cli.py
robospec/knowledge/: reward_patterns.md  robots.json
robospec/knowledge/api_reference/: mdp_actions.md  mdp_events.md  mdp_observations.md  mdp_rewards.md  mdp_terminations.md
robospec/nemotron/: client.py
robospec/pipeline/: analyzer.py  context.py  explainer.py  generator.py  validator.py
robospec/prompts/: analyze.txt  explain.txt  generate.txt  repair.txt  system.txt
robospec/templates/: __init__.py.j2  train.py.j2
scripts/: extract_mdp_api.py
tests/: test_analyzer.py  test_generator.py  test_validator.py
